--- a/PortfolioGenerator/package.json
+++ b/PortfolioGenerator/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.0",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
